--- a/.github/workflows/test-ffmpeg.yaml
+++ b/.github/workflows/test-ffmpeg.yaml
@@ -1,10 +1,15 @@
 name: Test setup-yt-dlp/ffmpeg
 on:
   push:
+    branches:
+      - main
     paths:
       - ffmpeg/**
       - .github/workflows/test-ffmpeg.yaml
-      
+  schedule:
+    - cron: '7 11 1 * *'
+  workflow_dispatch:
+  
 jobs:
   test:
     runs-on: ${{ matrix.os }}
